<resources>
    <string name="app_name">TPF App</string>

    <string name="data">To Reset Password or if you have forgotten your password,then enter your email to recover or reset your password.
        You Will be Received Reset Password email in your mail account and by clicking on that you can reset password for your account.
    </string>

    <string name="aboutus">About Us</string>

    <string name="created">   Developed By  </string>

    <string name="people">

        Yogesh Sharma  \n
        Deepa Shelar    \n
        Saurav Ingale      \n
        Pratiksha Parkhi
    </string>
    <string name="info">

       <br>
        We intend to develop one
        as such for the Training
        and Placement cell of our
        college and make it accessible
           to all the students. It includes notifications and regular updates about the cell along with the list of students selected for companies, events and activities, training schedules, placement information, company information, CRT material discussion forums etc., which would provide ease to both the management and the students as  well.
           </br></string>


    <string name="vision">Vision</string>

    <string name="vision_info">
        <br>
            Equipping the students with relevant and conceptualized professional skills and guiding them towards a bright future and career all around the world with the values of – ‘Sincerity’, ‘Hard Work’ and ‘Ethics’.

        </br>

    </string>

    <string name="obj">

        Objective
    </string>

    <string name="Objective">
    Training and Placement Cell is to guide students to choose right career and to give knowledge, skill, and aptitude and meet the manpower requirements of the Industry.
    </string>


    //------- Terms and Conditions

    <string name="terms_head">This page is used to inform our users regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Mobile Apps or its Services.</string>
    <string name="terms_head1">
       <b>What information do we collect?</b>
    </string>

    <string name="terms_personal_info">
       <b>Personal Information:</b>
    </string>

    <string name="terms_personal_info_details">
       We do not collect Personal Information. “Personal Information” is information that identifies you or another person, which may be transmitted or received when you use an Application, the Services and/or the Site. Personal Information includes your geographic location information, names, physical addresses, email addresses, telephone, fax, SSN, information stored within your devices and other information you transmit or receive using an Application, the Service and/ or the Site which identifies you or another person.
    </string>

    <string name="terms_nonpersonal_info">
       <b>Non-Personal Information:</b>
    </string>

    <string name="terms_nonpersonal_info_details">
      We may collect Non-Personal Information about users whenever they interact with our apps. Non-Personal Information may include the information about your devices, including the list of installed apps on your devices, and technical information about users means of connection to our apps, such as the versions of phone model and other similar information.
    </string>

    <string name="infocollect">
        When do we collect information?
    </string>

    <string name="infocollectdetails">
        We collect information from you when you or enter information on our site Or When Install our Application
    </string>

    <string name="infouse">
        What do we use your information for?
    </string>

    <string name="infopersonal">
       Personal Information:
    </string>

    <string name="infopersonaldetails">
       Since we do not collect Personal Information, we may not use your personal information in any way.
    </string>

    <string name="infononpersonal">
      Non- Personal Information:
    </string>

    <string name="infononpersonaldetails">
       We may use Non-Personal Information for any purpose as below: \n

1. personalize user experience, \n
2. improve our Mobile Apps or its services, \n
3. improve user service and respond to queries and emails of our users,
   run and operate our Mobile Apps or its Services. \n
We do not sell, trade, or otherwise transfer to outside parties your personally identifiable information. However, Non-personal information collected may used only to identify potential cases of abuse.
    </string>

    <string name="ThirdPart">
        Third Party
    </string>

    <string name="ThirdPartdetails">
        In general,the Applications,uses Google Admob SDK.This is for collecting information for serving advertisements through out the application.The Site may also carry advertisements from other companies. When you click on links of third parties in an Application, the Services or the Site, you may leave the Application,the Services or the Site. We do not collect your information on and through and This Policy does not address, and we are not responsible for, the privacy practices of Web sites operated by third parties, whether they are linked to or otherwise accessible from an Application, the Services or the Site. The inclusion of a link or accessibility of third party Websites does not imply endorsement of such third party Website by us.
        The information that you transfer and share through the Application, the Services and/or the Site may be intercepted, collected, used and disclosed by third parties. We are not responsible for any interception, collection, use and disclosure of your information by any third party. Please choose other ways to transfer and share if you have higher security requirements.
    </string>

    <string name="permission">
        Permissions we us
    </string>

    <string name="permissiondetails">
       We use the following Permissions while using the application. All such permissions are for improving the application. Please read why these permissions are required in this application.

        <b>Storage Permission </b>:- This is for storing and deleting the files made using Wallpaper App.

        <b>Photos / Media / Files</b>:- For saving the wallpaper, set the background as wallpaper, sharing the DP images etc.

        <b>Internet Colection</b>:- This is for getting the files from Internet.
    </string>

    <string name="security">
        Information security
    </string>

    <string name="securitydetails">
        The security of your Personal Information is important to us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.
    </string>

    <string name="amendmants">
       Changes and amendments
    </string>

    <string name="amendmantsdetails">
      We reserve the right to modify this privacy policy relating to our Mobile Apps or its Services at any time, effective upon posting of an updated version of this privacy policy on the Website. When we do we will revise the updated date at the top of this page.
    </string>

    <string name="policy">
      Acceptance of this policy
    </string>


    <string name="policydetails">
     You acknowledge that you have read this Policy and agree to all its terms and conditions. By using our Mobile Apps or its Services you agree to be bound by this Policy. If you do not agree to abide by the terms of this Policy, you are not authorized to use or access our Mobile Apps or its Services.
    </string>

    <string name="contacting">
      Contacting Us
    </string>

    <string name="contactingdetails">
      If you have any questions about this Policy, please email us on tour2tech@gmail.com
    </string>


    //---------- About App

    <string name="aboutapp">Training and Placement Android app is developed using following technology stack.</string>

</resources>
