<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About_Us">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBarAboutApp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"

            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/aboutus"
                android:textAlignment="center"
                android:textSize="35dp"
                android:textStyle="bold"
                android:textColor="#FF4500"
                />

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_marginTop="8dp"

            >


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:background="@drawable/friend"
                >


            </ImageView>


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            >

            <TextView
                android:id="@+id/create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:textAlignment="center"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="#FF4500"
                android:textStyle="bold"
                android:textSize="30dp"

                />




        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp"
            >



            <TextView
                android:id="@+id/credit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/people"
                android:textAlignment="center"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textColor="#181718"
                android:textStyle="bold"
                android:textSize="30dp"

                />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:freezesText="false"
                android:text="@string/info"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20dp"
                tools:visibility="visible" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision"
                android:textSize="35dp"
                android:textAlignment="center"
                android:textColor="#FF4500"
                android:textStyle="bold"

                />


        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:text="@string/vision_info"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="447dp"
                android:textColor="@color/cardview_dark_background"/>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            >


            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/obj"
                android:textSize="35dp"
                android:textAlignment="center"
                android:textColor="#FF4500"
                android:textStyle="bold"

                />




        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="start|top"
                android:text="@string/Objective"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textSize="20dp"
                android:textColor="@color/cardview_dark_background"/>




        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>